@@ -36,6 +36,8 @@ Changelog 0.8.0.1
 [SA-00465] update SQLite DB
 [SA-00451] MediaPlayer: back button is not working correct
 [SA-00415] Release 0.8.0.1 Tasks
+[SA-00467] Sally: auto resize MessageBoxes to fit in text
+[SA-00458] Sally: auto resize CLabelBox control
 
 
 Changelog 0.7.0.6
